# emulite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: cpu_bench.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GUI.md  PLATFORMS.md
examples/: basic_usage.rs  cpu_test.rs  debug_example.rs
src/: lib.rs  main.rs
src/audio/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/cpu/: arm.rs  generic.rs  m68k.rs  mips.rs  mod.rs  mos6502.rs  x86.rs
src/debug/: mod.rs
src/gui/: app.rs  dialogs.rs  mod.rs  panels.rs  themes.rs  widgets.rs
src/input/: mod.rs
src/memory/: mod.rs
src/utils/: mod.rs
src/video/: mod.rs
src/video/shaders/: fragment.wgsl  vertex.wgsl
tests/: integration_tests.rs
