[package]
name = "emulite"
version = "0.1.0"
edition = "2021"
authors = ["Emulite Team"]
description = "Multi-platform video game emulator written in Rust"
license = "MIT"
repository = "https://github.com/emulite/emulite"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

# Graphics and rendering
wgpu = "0.17"
winit = "0.28"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }

# GUI framework
egui = "0.23"
eframe = "0.23"
egui-wgpu = "0.23"
egui-winit = "0.23"
rfd = "0.12"
open = "5.0"

# Audio
cpal = "0.15"
hound = "3.5"

# Input handling
gilrs = "0.10"

# File handling and archives
zip = "0.6"
flate2 = "1.0"

# Threading and async
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"

# Math and utilities
nalgebra = "0.32"
bitflags = "2.4"
lazy_static = "1.4"

# Configuration and file handling
toml = "0.8"
dirs = "5.0"
futures = "0.3"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.7"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "cpu_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
